--- a/TomKinect/packages.config
+++ b/TomKinect/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.Kinect.Face.x64" version="2.0.1410.19000" targetFramework="net45" />
   <package id="Microsoft.Kinect.Tools.x64" version="2.0.1410.19000" targetFramework="net45" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net45" />
+  <package id="WriteableBitmapEx" version="1.5.0.0" targetFramework="net45" />
 </packages>
